--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
-            <div class="channel-name" onclick="playStream('https://vkvsd14.okcdn.ru/cmaf/7381061929703/sig/9ldvDRxTE30/srcIp/13.232.205.105/urls/185.226.53.64/expires/1733264195124/clientType/13/srcAg/CHROME/fromCache/1/mid/8776469523431/id/7381061929703/get/COfX5PK2_wEQ6AcYAzIICgYIgAUQ6AI6BAjE2AJaBggBEAIoF2ICCBBpbYZ53zFQOQ/track.m3u8')">Star Sports</div>
+            <div class="channel-name" onclick="playStream('https://vkvsd63.okcdn.ru/cmaf/7381061929703/sig/zvYYGwODwfI/srcIp/13.234.217.77/urls/185.226.53.64/expires/1733528824891/clientType/13/srcAg/CHROME/fromCache/1/mid/8776469523431/get/hls_8776469523431.bFDIKY46s2E.m3u8')">Star Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports">
