--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <div class="channel-container">
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(6).jpeg" alt="TNT Sports">
-            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream4_160p/playlist.m3u8?vidictid=200655169230&id=13&pk=c96b31ff1c5ef91f50feef0aa40d7946d7209ba6bb6c117a42147525af791a4feebb36bb10d32c5cbf189975e1dda55f090954a668a7ccdb46fea9c9daf5a45a')">TNT Sports</div>
+            <div class="channel-name" onclick="playStream('https://ottb.live.cf.ww.aiv-cdn.net/lhr-nitro/live/clients/dash/enc/f0qvkrra8j/out/v1/f8fa17f087564f51aa4d5c700be43ec4/cenc.mpd')">TNT Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
