--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <div class="channel-container">
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(6).jpeg" alt="TNT Sports">
-            <div class="channel-name" onclick="playStream('https://ottb.live.cf.ww.aiv-cdn.net/lhr-nitro/live/clients/dash/enc/f0qvkrra8j/out/v1/f8fa17f087564f51aa4d5c700be43ec4/cenc.mpd')">TNT Sports</div>
+            <div class="channel-name" onclick="playStream('https://cbado.pricesaskeloadsc.com/tnt_2_gb/tracks-v1a1/mono.m3u8?token=46914dd327a7165f2270499bdab2566fe7ae286c-15-1733946232-1733910232')">TNT Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
