--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
-            <div class="channel-name" onclick="playStream('https://vkvsd63.okcdn.ru/cmaf/7381061929703/sig/zvYYGwODwfI/srcIp/13.234.217.77/urls/185.226.53.64/expires/1733528824891/clientType/13/srcAg/CHROME/fromCache/1/mid/8776469523431/get/hls_8776469523431.bFDIKY46s2E.m3u8')">Star Sports</div>
+           
+        </div> <div class="channel-name" onclick="playStream('https://puc2.mylife1.top:8088/mobile/stream8_240p/playlist.m3u8?vidictid=200711545306&id=30&pk=a27a40f86a580800e77c0f9a2843dee42168c99c491a55b8456ee2052c16d0671cb460e94e6ab2ec3c0e609f20c6fd44fc335c456c90b52fe5647664ec234de3')">Star Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports">
@@ -197,7 +198,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow Cricket">
-            <div class="channel-name" onclick="playStream('https://mut1.mylife1.top:8088/live/webcrict20/playlist.m3u8?vidictid=200602059081&id=118106&pk=97cf30ed49e067b102b81df2fbe247aa827b56ce71cd9dd670b535c800bffa7b64b6368e153345c22ff2e6c2a6c739f1419d36351cc896156012a7e788ba4a1e')">Willow Cricket</div>
+            <div class="channel-name" onclick="playStream('https://puc2.mylife1.top:8088/mobile/stream6_240p/playlist.m3u8?vidictid=200715646743&id=22&pk=a27a40f86a580800e77c0f9a2843dee42168c99c491a55b8456ee2052c16d0671cb460e94e6ab2ec3c0e609f20c6fd44fc335c456c90b52fe5647664ec234de3')">Willow Cricket</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpeg" alt="PTV Sports">
