--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports">
-            <div class="channel-name" onclick="playStream('https://mut1.mylife1.top:8088/live/webcrice09/playlist.m3u8?vidictid=200606845249&id=116730&pk=97cf30ed49e067b102b81df2fbe247aa827b56ce71cd9dd670b535c800bffa7b64b6368e153345c22ff2e6c2a6c739f1419d36351cc896156012a7e788ba4a1e')">Sky Sports</div>
+            <div class="channel-name" onclick="playStream('https://muc1.mylife1.top:8088/live/webcrict20/playlist.m3u8?vidictid=200723515176&id=118106&pk=36a94d6e2213aee62ee820c471e7818caf8a5722f4d70d684d1ecb5f7eb7f624c851feca601ea55012590644b8fa5f86c0f4ae989fa1df5a4937e938ca9fe686')">Sky Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow Cricket">
