--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports">
-            <div class="channel-name" onclick="playStream('https://muc1.mylife1.top:8088/live/webcrict20/playlist.m3u8?vidictid=200723515176&id=118106&pk=36a94d6e2213aee62ee820c471e7818caf8a5722f4d70d684d1ecb5f7eb7f624c851feca601ea55012590644b8fa5f86c0f4ae989fa1df5a4937e938ca9fe686')">Sky Sports</div>
+            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream3_240p/playlist.m3u8?vidictid=200729775720&id=10&pk=fe0ef81dafa793ff3fdd3c933c3887f6ae52b11595dd877a9ea3568736f2b892c851feca601ea55012590644b8fa5f86c0f4ae989fa1df5a4937e938ca9fe686')">Sky Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow Cricket">
